k8s/aggregator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator
  namespace: stream-pulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator
  template:
    metadata:
      labels:
        app: aggregator
    spec:
      containers:
        - name: aggregator
          image: mectronx/stream-pulse-aggregator:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          readinessProbe:
            tcpSocket:
              port: 3001
          livenessProbe:
            tcpSocket:
              port: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: aggregator
  namespace: stream-pulse
spec:
  selector:
    app: aggregator
  ports:
    - port: 3001
      targetPort: 3001
