k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: stream-pulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: mectronx/stream-pulse-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          readinessProbe:
            tcpSocket:
              port: 3002
          livenessProbe:
            tcpSocket:
              port: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: stream-pulse
spec:
  selector:
    app: gateway
  ports:
    - port: 3002
      targetPort: 3002
