k8s/ingestor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingester
  namespace: stream-pulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingester
  template:
    metadata:
      labels:
        app: ingester
    spec:
      containers:
        - name: ingester
          image: mectronx/stream-pulse-ingester:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
          livenessProbe:
            tcpSocket:
              port: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: ingester
  namespace: stream-pulse
spec:
  selector:
    app: ingester
  ports:
    - port: 3000
      targetPort: 3000
